2016-03-25 Richard Frith-Macdonald <rfm@gnu.org>

	* common.make:
	* config.make.in:
	* configure.ac:
	* library-combo.make:
	* Documentation/library-combo.7:
	* TestFramework/Testing.h:
	* configure:
	Remove garbage collection support

2016-03-04 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Enable strict v2 mode by default
	* configure: regenerate
	* README.Packaging: Warn about updating ancient makefiles
	* Documentation/library-combo.7: Talk about ng runtime
	* Version:
	* Documentation/news.texi:
	* Documentation/releasenotes.texi:
	Update prior to new release

2016-03-02 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Improve selection of clang when 'ng' runtime library
	is selected.
	* configure: Regenerate.
	* library-combo.make: Add support for ARC with the 'ng' runtime
	setting.  Enabled by defining GS_WITH_ARC=1 at the start of the
	GNUmakefile or in the environment or in the 'make' arguments.

2016-03-02 Niels Grewe <niels.grewe@halbordnung.de>

	* Master/documentation.make:
	Support skipping the documentation build if documentation=no
	is supplied
	* Documentation/gnustep-make.texi:
	Document the new documentation=no feature (and messages=yes, which
	as also missing).

2015-12-11 23:34-EST Gregory John Casamento <greg.casamento@gmail.com>

	* common.make: Mute error when trying to parse redhat-version
	file.

2015-11-26 Ivan Vucica <ivan@vucica.net>

	* ChangeLog:
	Fixed dates on some previous entries.

	* bake_debian_files:
	Fixed a typo: DEB_PRIORTY -> DEB_PRIORITY.

2015-10-26 Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests.in:
	Exit with status 1 if there are any test failures, 0 otherwise.

2015-10-24 Richard Frith-Macdonald <rfm@gnu.org>

	* Instance/framework.make:
	* Instance/library.make:
	* TestFramework/gnustep-tests.in:
	Improve automated library and framework testcase handling, with
	code to tell the testcases where to find the library/framework