@@ -20,69 +20,6 @@
 #   If not, write to the Free Software Foundation,
 #   51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
-# Get library_combo from LIBRARY_COMBO or default_library_combo (or
-# from the command line if the user defined it on the command line by
-# invoking `make library_combo=gnu-gnu-gnu'; command line
-# automatically takes the precedence over makefile definitions, so
-# setting library_combo here has no effect if the user already defined
-# it on the command line).
-ifdef LIBRARY_COMBO
-  library_combo := $(LIBRARY_COMBO)
-else
-  library_combo := $(default_library_combo)
-endif
-
-# Handle abbreviations for library combinations.
-the_library_combo = $(library_combo)
-
-ifeq ($(the_library_combo), nx)
-  the_library_combo = nx-nx-nx
-endif
-
-ifeq ($(the_library_combo), apple)
-  the_library_combo = apple-apple-apple
-endif
-
-ifeq ($(the_library_combo), gnu)
-  the_library_combo = gnu-gnu-gnu
-endif
-
-ifeq ($(the_library_combo), ng)
-  the_library_combo = ng-gnu-gnu
-endif
-
-ifeq ($(the_library_combo), fd)
-  the_library_combo = gnu-fd-gnu
-endif
-
-# Strip out the individual libraries from the library_combo string
-combo_list = $(subst -, ,$(the_library_combo))
-
-# NB: The user can always specify any of the OBJC_RUNTIME_LIB, the
-# FOUNDATION_LIB and the GUI_LIB variable manually overriding our
-# determination.
-
-ifeq ($(OBJC_RUNTIME_LIB),)
-  OBJC_RUNTIME_LIB = $(word 1,$(combo_list))
-endif
-
-ifeq ($(FOUNDATION_LIB),)
-  FOUNDATION_LIB = $(word 2,$(combo_list))
-endif
-
-ifeq ($(GUI_LIB),)
-  GUI_LIB = $(word 3,$(combo_list))
-endif
-
-# Now build and export the final LIBRARY_COMBO variable, which is the
-# only variable (together with OBJC_RUNTIME_LIB, FOUNDATION_LIB and
-# GUI_LIB) the other makefiles need to know about.  This LIBRARY_COMBO
-# might be different from the original one, because we might have
-# replaced it with a library_combo provided on the command line, or we
-# might have fixed up parts of it in accordance to some custom
-# OBJC_RUNTIME_LIB, FOUNDATION_LIB and/or GUI_LIB !
-export LIBRARY_COMBO = $(OBJC_RUNTIME_LIB)-$(FOUNDATION_LIB)-$(GUI_LIB)
-
 OBJC_LDFLAGS =
 OBJC_LIBS = 
 
